fabric/testdata/out/ing_brownie-reject-http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"http\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(400) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":400,\\\"detail\\\":\\\"TLS
      is required\\\",\\\"type\\\":\\\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\\\"}\")
      -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"fe8288b6-d1fc-11e8-90e2-0618dc6898fa","deployment-id":"d-25iwoeb4s9dydgtj9xoiwy97je","pipeline-id":"l-s9vh4tc13wsng4p9j2ic9imwz"},"name":"brownie-reject-http-route","namespace":"default"},"spec":{"rules":[{"host":"brownie.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"brownie","servicePort":"http"},"pathType":"ImplementationSpecific"}]}},{"host":"spp-logistics-data-test.zalandoapis.com","http":{"path [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") && Header("X-Forwarded-Proto", "http")
      -> unverifiedAuditLog("sub") -> status(400) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":400,\"detail\":\"TLS is required\",\"type\":\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\"}")
      -> <shunt>
  creationTimestamp: "2019-06-17T13:46:52Z"
  generation: 1
  labels:
    controller-uid: fe8288b6-d1fc-11e8-90e2-0618dc6898fa
    deployment-id: d-25iwoeb4s9dydgtj9xoiwy97je
    pipeline-id: l-s9vh4tc13wsng4p9j2ic9imwz
  name: brownie-reject-http-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: brownie
    uid: fe8288b6-d1fc-11e8-90e2-0618dc6898fa
  resourceVersion: "1370356609"
  uid: 5cc68c3c-9106-11e9-a3f0-065b20c8b844
spec:
  rules:
  - host: brownie.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: brownie
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-logistics-data-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: brownie
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
